# sr-ros-interface

./: babbler.cpp  babbler.lib  counting  dllheader.h  firststeps  grasps.xml  ipdialog.cpp  ipdialog.h  ipdialog.ui  main.cpp  qtest.cpp  qtest.h  qtest.ui  rosslider.cpp  rosslider.h  rosslider.ui
docs/source/: index.rst
moveit_configs/right_srhand_ur_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/right_srhand_ur_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ur10srh.srdf
moveit_configs/right_srhand_ur_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real_robot.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10srh_moveit_controller_manager.launch  ur10srh_moveit_controller_manager.launch.xml  warehouse.launch
shadow_robot/: package.xml
spcu/: CMakeLists.txt  mainpage.dox  manifest.xml
spcu/include/spcu/: SPCU.h
spcu/launch/: spcu.launch
spcu/msg/: ActuatorCommand.msg  ControllerState.msg  TargetList.msg
spcu/src/: SPCU.cpp  SPCU_node.cpp
spcu/srv/: SetController.srv
sr_core/: README.md
sr_core/sr_core/: CMakeLists.txt  package.xml
sr_description/arm/xacro/hand_support/: shadowarm_handsupport_motor.transmission.xacro
sr_description/arm/xacro/lower_arm/: shadowarm_lowerarm.transmission.xacro
sr_description/arm/xacro/trunk/: shadowarm_trunk.transmission.xacro
sr_description/arm/xacro/upper_arm/: shadowarm_upperarm.transmission.xacro
sr_description/hand/config/: hand_controller_gazebo.yaml  hand_effort_controller_gazebo.yaml
sr_description/hand/model/: forearm_muscle.dae
sr_description/hand/xacro/: three_finger_hand_muscle_biotac.urdf.xacro
sr_description/hand/xacro/finger/distal/: distal.gazebo.xacro  distal.transmission.xacro
sr_description/hand/xacro/finger/knuckle/: knuckle.gazebo.xacro  knuckle.transmission.xacro
sr_description/hand/xacro/finger/lfmetacarpal/: lfmetacarpal.gazebo.xacro  lfmetacarpal.transmission.xacro
sr_description/hand/xacro/finger/middle/: middle.gazebo.xacro  middle.transmission.xacro
sr_description/hand/xacro/finger/proximal/: proximal.gazebo.xacro  proximal.transmission.xacro
sr_description/hand/xacro/palm/: palm.gazebo.xacro  palm.transmission.xacro  palm.urdf.xacro
sr_description/hand/xacro/thumb/: thbase.gazebo.xacro  thbase.transmission.xacro  thbiotac.urdf.xacro  thdistal.gazebo.xacro  thdistal.transmission.xacro  thhub.gazebo.xacro  thhub.transmission.xacro  thmiddle.gazebo.xacro  thmiddle.transmission.xacro  thproximal.gazebo.xacro  thproximal.transmission.xacro
sr_description/hand/xacro/wrist/: wrist.transmission.xacro  wrist.urdf.xacro
sr_description/loaders/: load_hand_model.launch
sr_description/other/model/: kinect.dae
sr_description/other/xacro/gazebo/: gazebo.urdf.xacro
sr_description/other/xacro/kinect/: gazebo_kinect.urdf.xacro  shadowarm_kinect.urdf.xacro
sr_description/robots/: shadowhand_three_finger_muscle_biotac.urdf.xacro
sr_example/scripts/sr_example/: demo_c.py
sr_gazebo_sim/: CMakeLists.txt  package.xml
sr_gazebo_sim/include/sr_gazebo_sim/: gazebo_hardware_sim.h
sr_gazebo_sim/src/: gazebo_hardware_sim.cpp
sr_grasp/scripts/: convert_xml.py  quick_grasp
sr_grasp/src/sr_grasp/: __init__.py
sr_hand/launch/advanced/: srh_etherCAT_noTF.launch
sr_hand/launch/gazebo/: gazebo_arm_and_hand.launch
sr_hand/launch/gazebo/loaders/: hand_controllers.launch
sr_hand/scripts/sr_hand/: Grasp.py  grasps_parser.py  shadowhand_ros.py
sr_hand/src/: hand_commander.cpp
sr_hand/test/: hand_commander_test.cpp  hand_commander_test.launch
sr_interface/: README.md
sr_interface/sr_interface/: CMakeLists.txt  package.xml
sr_mechanism_controllers/src/: joint_spline_trajectory_action_controller.cpp
sr_multi_description/urdf/for_moveit/: right_srhand_ur10arm.urdf.xacro
sr_multi_moveit/ur10srh_moveit_config/launch/: moveit_planning_and_execution.launch
sr_robot_commander/src/sr_robot_commander/: sr_hand_commander.py  sr_robot_commander.py
sr_robot_launch/config/: rh_trajectory_controller.yaml
sr_robot_launch/config/gazebo/controller/: hand_controllers_gazebo.yaml
sr_robot_launch/launch/: right_srhand_ur10arm.launch  special_hand.launch
sr_standalone/: README.md
sr_tools/: README.md
sr_tools/sr_tools/: CMakeLists.txt  package.xml
