<package>
  <name>shadow_robot</name>
  <version>1.4.0</version>
  <description>This meta package is the recommended way of installing Shadow Robot packages.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>
  <license>GPL</license>

  <url type="website">http://ros.org/wiki/shadow_robot</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_common</run_depend>
  <run_depend>sr_core</run_depend>
  <run_depend>sr_interface</run_depend>


  <!-- Dependencies needed only for running tests. -->

  <export>
    <metapackage/>
  </export>
</package>
