<?xml version="1.0"?>
<package>
  <name>sr_interface</name>
  <version>0.0.0</version>
  <description>This contains everything needed for the simplified interface to interact with the shadow hand.</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="ugo@shadowrobot.com">Ugo Cupcic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sr_example</build_depend>
  <build_depend>sr_grasp</build_depend>
  <build_depend>sr_multi_description</build_depend>
  <build_depend>sr_multi_moveit</build_depend>
  <build_depend>sr_robot_commander</build_depend>
  <build_depend>sr_robot_launch</build_depend>
  <run_depend>sr_example</run_depend>
  <run_depend>sr_grasp</run_depend>
  <run_depend>sr_multi_description</run_depend>
  <run_depend>sr_multi_moveit</run_depend>
  <run_depend>sr_robot_commander</run_depend>
  <run_depend>sr_robot_launch</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
