<?xml version="1.0"?>
<package>
  <name>sr_tools</name>
  <version>0.0.0</version>
  <description>Advanced tools for specific use cases.</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <author email="ugo@shadowrobot.com">Ugo Cupcic</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sr_grasp_fast_planner</build_depend>
  <build_depend>sr_movements</build_depend>
  <run_depend>sr_grasp_fast_planner</run_depend>
  <run_depend>sr_movements</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
